<resources>
    <string name="app_name">E-Museum</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Ke Benda</string>
    <string name="title">E-Museum Jaringan Semantik</string>
    <string name="scan">Scan QR-Code</string>
    <string name="quit">Keluar</string>
    <string name="detail_info">Detail Informasi</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="send_email_using">Send Email using</string>
    <string name="scan_prompt">Cocokkan QR-Code</string>

    <string name="info_budaya">Budaya</string>
    <string name="info_kategori">Kategori</string>
    <string name="info_deskripsi">Deskripsi</string>
    <string name="info_pembuat">Pembuat</string>
    <string name="info_tempat_penyimpanan">Tempat Penyimpanan</string>
    <string name="info_teknik_pembuatan">Teknik Pembuatan</string>
    <string name="info_dimensi">Panjang/Lebar/Tinggi</string>
    <string name="info_provinsi">Provinsi</string>
    <string name="info_kabupaten">Kabupaten</string>
    <string name="info_kondisi">Kondisi</string>
    <string name="info_lat_long">Latidude,Longitude</string>
    <string name="info_kontributor">Kontributor</string>
    <string name="info_tanggal_update">Tanggal Update</string>
    <string name="mohon_tunggu">Mohon tunggu...</string>
    <string name="empty_value">Data kosong</string>
    <string name="empty_data">Data tidak ditemukan</string>
    <string name="info_benda_terkait">Item Terkait dengan Benda</string>
    <string name="cek_lokasi">Cek lokasi</string>
    <string name="berdasarkan">Berdasarkan</string>

    <string name="category_prompt">Pilih Kategori</string>
    <string-array name="category">
        <item>Nama Koleksi</item>
        <item>Kategori</item>
        <item>Nama Pembuat</item>
        <item>Tempat Penyimpanan</item>
        <item>Kondisi</item>
        <item>Provinsi</item>
        <item>Kabupaten</item>
    </string-array>

    <string name="json_item_details_url">getItemDetails.php?id=</string>
    <string name="json_related_item_url">getRelatedItem.php?id=</string>
    <string name="json_auto_related_item_url">getAutoRelatedItem.php?id=</string>
</resources>
